--- a/index.html
+++ b/index.html
@@ -1,33 +1,45 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>ELLA & HAN'S ICECREAM</title>
-    <link rel="stylesheet" href="/Users/duncansanya/Documents/Projects/frontend/static/css/main.css" />
-</head>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<body onload="load()">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>Ella & Han's Icecream</title>
+    <link rel="stylesheet" href="/Users/duncansanya/Documents/Projects/frontend/static/css/newmain.css" />
+  </head>
+  <body onload="load()">
+    <div class="container">
+      <center>
+          <h1>Ella & Han's Icecream</h1>
+          <img src="/Users/duncansanya/Documents/Projects/frontend/images/Ice cream.jpeg" alt="logo">
+      </center>
+    <h2>Welcome, please buildup your Ice cream</h2>
 
-  <center>
-      <h1 class="blink">ELLA & HAN'S ICECREAM</h1>
-      <img src="/Users/duncansanya/Documents/Projects/frontend/images/Ice cream.jpeg" alt="logo">
-  </center>
+    <div class="row">
+      <div class="col-12">
+        <div class="">
+          <h5 for="flavors">Choose a flavor</h5>
+          <div class="form-group" id="flavors"></div>
+        </div>
+      </div>
+      <div class="col-12">
+        <div class="">
+            <h5 for="toppings">Choose a topping</h5>
+            <div class="form-group" id="toppings"></div>
+        </div>
+      </div>
+      <div class="col-12">
+        <div class="">
+            <h5 for="containers">Choose a container</h5>
+            <div class="form-group" id="containers"></div>
+        </div>
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </div>
 
-  <h2>Welcome, please buildup your Ice cream</h2>
-
-  <label for="flavors">Choose a flavor:</label>
-  <select name="flavors" id="flavors">
-      <option value="Vanilla">Vanilla</option>
-      <option value="cotton candy">cotton candy</option>
-      <option value="chocolate mint">chocolate mint</option>
-      <option value="strawberry">strawberry</option>
-  </select>
-
-  <p id="greeting" class="bg-white" >Hello</p>
-
-  <button onclick="clicked()" class="bg-white">Change greeting</button>
-
-  <button class="button-green">Clear</button>
-</body>
-
-<script src="/Users/duncansanya/Documents/Projects/frontend/static/javascript/main.js"></script>
-</html>
+  </body>
+  <script src="/Users/duncansanya/Documents/Projects/frontend/static/javascript/main.js"></script>
+  </html>
